[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/DefaultButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/StarBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/StartMenu/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://GUI/PixelRPG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GUI/8-bit Arcade In.ttf" type="DynamicFontData" id=5]

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 33
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 6
font_data = ExtResource( 4 )

[node name="StartMenu" type="Node"]
script = ExtResource( 3 )

[node name="StarBackground" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 181.0
custom_constants/separation = 9
alignment = 1

[node name="StartButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 53.0
margin_right = 320.0
margin_bottom = 65.0
shortcut = SubResource( 5 )
text = "Start (Space)"

[node name="HistoryButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 74.0
margin_right = 320.0
margin_bottom = 86.0
text = "History"

[node name="SettingsButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 95.0
margin_right = 320.0
margin_bottom = 107.0
text = "Settings"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 116.0
margin_right = 320.0
margin_bottom = 128.0
shortcut = SubResource( 7 )
text = "Quit (Esc)"

[node name="Label" type="Label" parent="."]
margin_left = 42.0
margin_top = 15.0
margin_right = 286.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
custom_colors/font_color_shadow = Color( 0.270588, 0.698039, 0.0745098, 1 )
custom_fonts/font = SubResource( 8 )
text = "RISITAS REVENGE"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 168.0
margin_right = 73.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.0588235, 0.109804, 0.0313726, 1 )
custom_fonts/font = SubResource( 9 )
text = "Game by Nartyna"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HistoryButton" to="." method="_on_HistoryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
